--- a/contact-us.html
+++ b/contact-us.html
@@ -142,7 +142,12 @@
 </section>
 
 <section class="footer-container_2">
-<p>Copyright © 2023 by Bloom ElderlyCare. All rights reserved.</p>
+  <p class="credits">
+    © 2024 Bloom ElderlyCare. All Rights Reserved ~ Designed by
+    <a href="https://github.com/estheroluwabuyi" target="_blank"
+      >the_code_gal</a
+    >
+  </p>
   <section class="footer-container_2--icons">
   <a href="#">
     <div class="footer-container_2--img">
